--- a/renderer/PageShell.css
+++ b/renderer/PageShell.css
@@ -17,3 +17,55 @@ a {
 .navitem.is-active {
   background-color: #eee;
 }
+
+#react-root {
+  height: calc(100vh);
+}
+
+.leftContentContainer {
+  height: calc(100vh - 82px);
+}
+
+.rightContentContainer {
+  height: calc(100vh - 41px);
+}
+
+/* react-split-it */
+.split-horizontal {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.split-vertical {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.gutter {
+  flex-shrink: 0;
+  flex-grow: 0;
+  background: gray;
+}
+.gutter-horizontal {
+  cursor: col-resize;
+}
+.gutter-vertical {
+  cursor: row-resize;
+}
+.gutter:hover {
+  background: #8cF;
+}
+.gutter-dragging:hover {
+  background: cyan;
+}
+
+.pane {
+  flex-shrink: 1;
+  flex-grow: 1;
+  position: relative;
+}
+.pane-dragging {
+  overflow: hidden;
+}
+
